@@ -1,3 +1,6 @@
+2012-01-29
+ * added rts2script element to .rts2 templates
+
 2012-01-18
  * SBIG filter support (E. Kundra)
 
